fix weather overflowing modal, add photos to readme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -383,7 +383,7 @@ input:-webkit-autofill:focus {
 
 .weathersection {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-template-columns: repeat(5,  1fr);6
   gap: 0.5em;
 }
 
